--- a/src/style.css
+++ b/src/style.css
@@ -19,3 +19,15 @@ body {
     max-width: 1080px;
     margin: 0 auto;
 }
+
+.text-center {
+    text-align: center;
+}
+
+.pt-2 {
+    padding-top: 2rem;
+}
+
+.mb-2 {
+    margin-bottom: 2rem;
+}
