--- a/src/style.css
+++ b/src/style.css
@@ -31,3 +31,18 @@ body {
 .mb-2 {
     margin-bottom: 2rem;
 }
+
+/* # Input Section */
+
+#search-box {
+    height: 5rem;
+    background-image: radial-gradient(circle, #a4b9f0, #c8b5e6, #e0b5d7, #ebb8c7, #ecbfbd);
+    border-radius: 24px;
+    box-shadow: 5px 5px 5px 1px #7012eb;
+}
+
+#search-bar {
+    height: 1.5rem;
+    border: 1px solid #7012eb;
+    background-color: transparent;
+}
