--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,6 +17,19 @@ img {
     height: 30vh;
 }
 
+.rotation {
+    animation: rotation 10s infinite linear;
+}
+
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
+
 /* utilities */
 
 .container {
