--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,6 +69,8 @@ img {
 
 #search-bar {
     height: 1.5rem;
-    border: 1px solid #7012eb;
+    border: 2px solid #7012eb;
+    border-radius: 8px;
     background-color: transparent;
+    padding: 13px 4px;
 }
